K8S Advanced/10/istioyaml/1.3/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-istio.kubernets.cn
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
          path: /
