K8S Advanced/10/istioyaml/1.3/kiali-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: kiali-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kiali-istio.kubernets.cn
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: kiali
              port:
                number: 20001
          path: /
