K8S Advanced/10/istioyaml/1.3/prometheus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-istio.kubernets.cn
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090
          path: /
